gitops/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Replace=true
  name: banking-app
spec:
  replicas: 2
  namespace: banking-app-staging
spec:
  template:
    spec:
      containers:
        - name: banking-app
