gitops/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-app-ingress
  namespace: banking-app-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: banking.staging.votredomaine.com   
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-app-service
                port:
                  number: 80
  ingressClassName: nginx
